<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateAccountActivity" android:orientation="vertical" style="@style/ContainerStyle">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/card_corner" app:contentPadding="@dimen/card_padding"
            app:cardElevation="@dimen/card_elevation">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/edtEmailCA2" android:hint="@string/email_hint" style="@style/EditTextStyle"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/edtFirstnameCA" android:hint="@string/firstname_hint"
                    style="@style/EditTextStyle"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/edtLastnameCA" android:hint="@string/lastname_hint" style="@style/EditTextStyle"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/edtBirthDateCA" style="@style/EditTextStyle"
                    android:hint="@string/birthdate_hint"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/edtPhoneCA" android:hint="@string/phone_hint" style="@style/EditTextStyle"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/edtPasswordCA" android:hint="@string/password_hint" style="@style/EditTextStyle"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/edtPasswordConfirmCA" android:hint="@string/confirm_password_hint"
                    style="@style/EditTextStyle"/>
            <Button
                    android:text="@string/btn_save_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/btnCreateAccount"
                    style="@style/ButtonPrimaryStyle"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>