<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity" android:orientation="vertical" android:background="@color/gray"
        android:padding="10dp" style="@style/ContainerStyle">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/card_corner" app:contentPadding="@dimen/card_padding"
            app:cardElevation="@dimen/card_elevation">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal">
            <ImageView
                    app:srcCompat="@drawable/ic_logo"
                    android:id="@+id/imgLogo" style="@style/LogoStyle"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/edtUserLogin" android:hint="@string/user_hint" style="@style/EditTextStyle"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/edtPasswordLogin" android:hint="@string/password_hint"
                    style="@style/EditTextStyle"/>
            <CheckBox
                    android:text="Recordar credenciales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/chkRememberMe"
                    style="@style/CheckboxStyle"/>
            <Button
                    android:text="@string/btn_login_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/btnLogin" style="@style/ButtonPrimaryStyle"/>
            <Button
                    android:text="@string/btn_account_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/btnAccount" style="@style/ButtonSecondStyle"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>